@startuml

skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false


class ChangeStateUI <<presentation>>
class ChangeStateController<<application>>
class CourseManagementService<<service>>
class Course<<course>>
class PersistenceContext<<persistence>>
class RepositoryFactory<<factory>>
class CourseRepository <<repository>>

class ChangeStateUI{
show()
}

class ChangeStateController{
verifyCourse(course)
confirmForOpenClose(course)
changeState(course)
}

class PersistenceContext{
repositories()
}

class RepositoryFactory{
courses()
}

class CourseRepository{
findByCode(code)
}

class Course{
changeState(state)
state()
}

class CourseManagementService{
changeState(course)
}

ChangeStateUI -.-> ChangeStateController

ChangeStateController --> PersistenceContext
ChangeStateController --> RepositoryFactory
ChangeStateController --> CourseManagementService

RepositoryFactory --> CourseRepository

CourseManagementService --> Course

@enduml